Update UI and add plugin description and icons

--- a/BulkDeleteMigrator/BulkDeleteMigrator.csproj
+++ b/BulkDeleteMigrator/BulkDeleteMigrator.csproj
@@ -270,7 +270,12 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\play_icon_24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\load_icon_24.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>IF NOT EXIST Plugins mkdir Plugins
